--- a/index.html
+++ b/index.html
@@ -217,6 +217,16 @@
                 Business Owner
             </span>
         </div>
+        
+
+    </section>
+
+    <section class="images">
+
+        <img src="./images/mobile/image-gallery-milkbottles.jpg" alt="#">
+        <img src="./images/mobile/image-gallery-orange.jpg" alt="#">
+        <img src="./images/mobile/image-gallery-cone.jpg" alt="#">
+        <img src="./images/mobile/image-gallery-sugar-cubes.jpg" alt="#">
 
     </section>
 
